# ceia-am

./: .gitignore  CriteriosAprobacion.md  Datasets.md  README.md  index.html  pyproject.toml  requirements.txt
clase1/practica/: ntb.ipynb
clase2/ejercicios/: social_network.ipynb
clase2/jupyter_notebooks/: clasificacion.ipynb  hyperparameters.ipynb
clase2/material_complementario/clasificacion/: Introducción_a_algoritmos_de_clasificación.ipynb  implementacion_reg_logistica_knn_clasificacion.ipynb
clase2/material_complementario/optimizacion/: Búsqueda de hiperparámetros de modelos.ipynb  breast-cancer-winsconsin.csv  busqueda_de_hiperparametros_de_modelos.ipynb  requirements.txt  sweep_config.json  wandb_config.json
clase3/ejercicios/: Ejercicios.md  social_network_c3.ipynb  winequality.ipynb
clase3/jupyter_notebooks/: svm.ipynb
clase4/ejercicios/: winequality_c4.ipynb
clase4/jupyter_notebooks/: arbol_regresion.dot  arbol_regresion_alpha.dot  trees.ipynb
clase4/material_complementario/: implementacion_arboles_decision_clasificacion.ipynb
clase4/teoria/: Introducción_a_algoritmos_de_clasificación.ipynb
clase5/jupyter_notebooks/: Introduccion_al_Deep_Learning.ipynb  Introducción_al_Deep_Learning.ipynb  pytorch.ipynb
clase6/jupyter_notebooks/: bagging_boosting.ipynb  heart.py
clase7/jupyter_notebooks/: cluster.ipynb  pca.ipynb
trabajo-practico/: FIFA2026.ipynb  FIFA2026_win_nowin.ipynb  README.md
