[project]
name = "ceia-am-i"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "wandb>=0.22.0",
    "xgboost>=3.0.4",
]
